--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,13 +3,15 @@
 <head>
   
   <meta charset="UTF-8">
+  <title>E-Commerce</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>E-Commerce site</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/img/logo1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ asset('assets/img/logo1.png') }}" type="image/x-icon">
   <meta name="description" content="">
   <meta name="amp-script-src" content="">
+  
+<link href="https://fonts.googleapis.com/css?family=Manrope:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 
 <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Nunito:600,700" rel="stylesheet"> 
@@ -20,19 +22,18 @@
 
 <!-- Template Stylesheet -->
         <link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
-</head> 
 
-    <body>
-
-  <script async  src="https://cdn.ampproject.org/v0.js"></script>
+          <script async  src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
+  <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
+  <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
-  
-  
+  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+  <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
-  </head>
+</head> 
+
 <body><amp-sidebar id="sidebar" class="cid-s329LoNSlx" layout="nodisplay" side="right">
         <div class="builder-sidebar" id="builder-sidebar">
             <button on="tap:sidebar.close" class="close-sidebar">
@@ -79,7 +80,267 @@
         <!-- SHOW BUTTON END -->
             </div>
 </amp-sidebar>
+
+  <section class="menu1 menu horizontal-menu cid-s0bsbJEbVa" id="menu1-0">
+    
+    <!-- <div class="menu-wrapper"> -->
+    <nav class="navbar navbar-dropdown navbar-expand-lg navbar-fixed-top">
+        <div class="menu-container container-fluid mbr-px-2">
+            <!-- SHOW LOGO -->
+            <div class="navbar-brand">
+                
+                <span class="navbar-caption-wrap"><a class="navbar-caption  text-black display-6 display-5" href="{{ path('home') }}">ProductAMP</a></span>
+            </div>
+            <!-- SHOW LOGO END -->
+            <!-- COLLAPSED MENU -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                
+                <!-- NAVBAR ITEMS -->
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
+                        <a class="nav-link link text-black display-4" href="{{ path('women') }}">Women</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link text-black display-4" href="{{ path('men') }}">Men</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link  dropdown-toggle text-black display-4" data-toggle="dropdown-submenu" aria-expanded="false">Explore</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item text-black display-4" href="{{ path('sunglasses') }}">Sunglasses</a>
+                            <a class="dropdown-item text-black display-4" href="{{ path('belts') }}">Belts</a><a class="text-black dropdown-item display-4" href="{{ path('accessories') }}" aria-expanded="false">Accessories </a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li></ul>
+                <!-- NAVBAR ITEMS END -->
+                <!-- SOCIAL ICON -->
+                <div class="menu-social-list">
+                    
+
+
+
+
+
+                    <a href="#" target="_blank">
+                        <span class="amp-iconfont animation-normal fa-twitter-square fa"><svg width="24" height="24" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1408 610q-56 25-121 34 68-40 93-117-65 38-134 51-61-66-153-66-87 0-148.5 61.5t-61.5 148.5q0 29 5 48-129-7-242-65t-192-155q-29 50-29 106 0 114 91 175-47-1-100-26v2q0 75 50 133.5t123 72.5q-29 8-51 8-13 0-39-4 21 63 74.5 104t121.5 42q-116 90-261 90-26 0-50-3 148 94 322 94 112 0 210-35.5t168-95 120.5-137 75-162 24.5-168.5q0-18-1-27 63-45 105-109zm256-194v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960q119 0 203.5 84.5t84.5 203.5z"></path></svg></span>
+                    </a><a href="#" target="_blank">
+                        <span class="amp-iconfont animation-normal fa-instagram fa"><svg width="24" height="24" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1152 896q0-106-75-181t-181-75-181 75-75 181 75 181 181 75 181-75 75-181zm138 0q0 164-115 279t-279 115-279-115-115-279 115-279 279-115 279 115 115 279zm108-410q0 38-27 65t-65 27-65-27-27-65 27-65 65-27 65 27 27 65zm-502-220q-7 0-76.5-.5t-105.5 0-96.5 3-103 10-71.5 18.5q-50 20-88 58t-58 88q-11 29-18.5 71.5t-10 103-3 96.5 0 105.5.5 76.5-.5 76.5 0 105.5 3 96.5 10 103 18.5 71.5q20 50 58 88t88 58q29 11 71.5 18.5t103 10 96.5 3 105.5 0 76.5-.5 76.5.5 105.5 0 96.5-3 103-10 71.5-18.5q50-20 88-58t58-88q11-29 18.5-71.5t10-103 3-96.5 0-105.5-.5-76.5.5-76.5 0-105.5-3-96.5-10-103-18.5-71.5q-20-50-58-88t-88-58q-29-11-71.5-18.5t-103-10-96.5-3-105.5 0-76.5.5zm768 630q0 229-5 317-10 208-124 322t-322 124q-88 5-317 5t-317-5q-208-10-322-124t-124-322q-5-88-5-317t5-317q10-208 124-322t322-124q88-5 317-5t317 5q208 10 322 124t124 322q5 88 5 317z"></path></svg></span>
+                    </a><a href="#" target="_blank">
+                        <span class="amp-iconfont animation-normal fa-facebook-square fa"><svg width="24" height="24" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1376 128q119 0 203.5 84.5t84.5 203.5v960q0 119-84.5 203.5t-203.5 84.5h-188v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-532q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960z"></path></svg></span>
+                    </a></div>
+                <!-- SOCIAL ICON END -->
+                <!-- SHOW BUTTON -->
+                
+                <!-- SHOW BUTTON END -->
+            </div>
+            <!-- COLLAPSED MENU END -->
+            
+            <button on="tap:sidebar.toggle" class="ampstart-btn hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </nav>
+    <!-- AMP plug -->
+    
+    <!-- </div> -->
+</section>
+
+<section class="header1 cid-s0bsc2KgEB" id="header01-1">
+    
+    
+    <div class="container-fluid mbr-white">
+        <div class="mbr-row">
+            <div class="mbr-col-lg-5 mbr-col-md-12 mbr-m-auto mbr-col-sm-12 md-pb">
+                <div class="content">
+                    
+                    <h1 class="mbr-section-title mbr-fonts-style align-left mbr-pb-2 display-1">Sunglasses Shop</h1>
+                    <p class="mbr-fonts-style mbr-text align-left mbr-pb-5  display-7">Unique glasses for a new era
+                        of fashion.</p>
+                    <div class="mbr-section-btn align-left"><a class="btn btn-md btn-white-outline display-4" href="#"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="19" height="19"><path d="M24 11l-6.7 6.7-1.4-1.4 4.3-4.3H0v-2h20.2l-4.3-4.3 1.4-1.4L24 11z"></path></svg></span>Discover</a>
+                    </div>
+                </div>
+            </div>
+            <div class="mbr-col-lg-7 mbr-col-md-12 img-col mbr-m-auto mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/01.jpg') }}" alt="" width="1099.8670212765958" height="919" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
         {% block body %}{% endblock %}
+
+        <section class="clients1 cid-s0bsyNmprb" id="clients01-9">
+
+    
+    <div class="container">
+        <div class="mbr-row mbr-jc-c">
+            <div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
+                <h3 class="mbr-section-subtitle mbr-black mbr-fonts-style mbr-pb-5 align-left display-5">Seen on
+                    Press</h3>
+                <p class="mbr-fonts-style mbr-text align-left mbr-pb-3 display-5">"Lorem ipsum dolor sit amet consectetur adipiscing
+                    commodo suscipit"</p>
+            </div>
+
+         <div class="line"></div>
+
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/1.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/2.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/3.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/4.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/5.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/1.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/2.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/3.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/4.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="{{ asset('assets/img/5.png') }}" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</section>
 
 <section class="form footer2 cid-s0bsukEenN" id="footer02-7">
     
@@ -190,14 +451,12 @@
 
   
   
-<amp-user-notification class="display-7" id="amp-cookies-notification" 
-style="color:#424a4d; background:rgba(234, 239, 241, 0.99); padding: 10px 5%; display:inline-block; 
-font-size:inherit; text-align: center;" layout="nodisplay">We use cookies to give you the best experience. 
-Read our <a style="color: #424a4d; text-decoration: underline;" href="privacy.html">cookie policy</a>
-.<button class="btn btn-sm btn-primary display-7" on="tap:amp-cookies-notification.dismiss,
-amp-cookies-notification.hide" style="display: inline-block; cursor: pointer; 
-margin-left: 10px; font-size:inherit;">Agree</button></amp-user-notification>
-
-    </body>
-
+<amp-user-notification class="display-7" id="amp-cookies-notification" style="color:#424a4d; background:rgba(234, 239, 241, 0.99); padding: 10px 5%; display:inline-block; font-size:inherit; text-align: center;" layout="nodisplay">We use cookies to give you the best experience. Read our <a style="color: #424a4d; text-decoration: underline;" href="privacy.html">cookie policy</a>.<button class="btn btn-sm btn-primary display-7" on="tap:amp-cookies-notification.dismiss,amp-cookies-notification.hide" style="display: inline-block; cursor: pointer; margin-left: 10px; font-size:inherit;">Agree</button></amp-user-notification>
+ 
+         <!-- JavaScript Libraries -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+ 
+ 
+ </body>
 </html>
