--- a/templates/help/index.html.twig
+++ b/templates/help/index.html.twig
@@ -1,20 +1,184 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HelpController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<section class="ampFeatures2 cid-s32acKsUxn" id="ampFeatures2-1o">
+    
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    
+    <div class="container">
+        <div class="title mbr-pb-4">
+            <h3 class="mbr-section-title mbr-pb-3 mbr-semibold mbr-white mbr-fonts-style display-1">Features</h3>
+            
+        </div>
+        <div class="mbr-row">
+            <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-6 md-pb">
+                <div class="card-wrapper">
+                    
+                    <div class="card-box mbr-m-auto mbr-pt-3">
+                        <h3 class="card-title mbr-semibold mbr-white mbr-fonts-style display-5">Set
+                            Priorities Correctly</h3>
+                        
+                        <p class="card-text mbr-fonts-style mbr-white mbr-pt-2 display-7">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Pellentesque sed mauris volutpat, porttitor tellus et,
+                            sagittis leo. Mauris mollis tempus risus, vitae pellentesque nibh aliquam in. Fusce euismod
+                            vestibulum enim, a gravida odio congue nec.</p>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/33664/Desktop/ecommercesite/ecommercesite/src/Controller/HelpController.php'|file_link(0) }}">src/Controller/HelpController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/33664/Desktop/ecommercesite/ecommercesite/templates/help/index.html.twig'|file_link(0) }}">templates/help/index.html.twig</a></code></li>
-    </ul>
-</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-6 md-pb">
+                <div class="card-wrapper">
+                    
+                    <div class="card-box mbr-m-auto mbr-pt-3">
+                        <h3 class="card-title mbr-semibold mbr-white mbr-fonts-style display-5">Сonsider All
+                            The Factors</h3>
+                        
+                        <p class="card-text mbr-white mbr-fonts-style mbr-pt-2 display-7">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Pellentesque sed mauris volutpat, porttitor tellus et,
+                            sagittis leo. Mauris mollis tempus risus, vitae pellentesque nibh aliquam in. Fusce euismod
+                            vestibulum enim, a gravida odio congue nec. </p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-6">
+                <div class="card-wrapper">
+                    
+                    <div class="card-box mbr-m-auto mbr-pt-3">
+                        <h3 class="card-title mbr-white mbr-semibold mbr-fonts-style display-5">Use The Best
+                            Tools</h3>
+                        
+                        <p class="card-text mbr-white mbr-fonts-style mbr-pt-2 display-7">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Pellentesque sed mauris volutpat, porttitor tellus et,
+                            sagittis leo. Mauris mollis tempus risus, vitae pellentesque nibh aliquam in. Fusce euismod
+                            vestibulum enim, a gravida odio congue nec. </p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-6 last-child">
+                <div class="card-wrapper">
+                    
+                    <div class="card-box mbr-m-auto mbr-pt-3">
+                        <h3 class="card-title mbr-semibold mbr-white mbr-fonts-style display-5">Analyze
+                            Competitors</h3>
+                        
+                        <p class="card-text mbr-white mbr-fonts-style mbr-pt-2 display-7">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Pellentesque sed mauris volutpat, porttitor tellus et,
+                            sagittis leo. Mauris mollis tempus risus, vitae pellentesque nibh aliquam in. Fusce euismod
+                            vestibulum enim, a gravida odio congue nec. </p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="mbr-col-md-12 mbr-col-lg-12 mbr-col-sm-12">
+
+                <div class="card-btn mbr-pt-4 mbr-section-btn mbr-pt-2"><a class="btn btn-white-outline display-4" href="#">Read More</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="content1 cid-s329LrFpw4" id="content01-1b">
+
+    
+    <div class="container">
+        <div class="mbr-row mbr-jc-c">
+            <div class="mbr-col-lg-8 mbr-col-md-12 mbr-col-sm-12">
+                <h3 class="mbr-section-subtitle mbr-black mbr-fonts-style mbr-pb-1 align-center display-5">
+                    Learn more about our brand</h3>
+                <p class="mbr-fonts-style mbr-text align-center display-5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus commodo suscipit vulputate.
+                    Maecenas rutrum mollis arcu, at condimentum lorem <a href="#" class="text-black">@mobirise</a>.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="clients1 cid-s329LGN3N2" id="clients01-1k">
+
+    
+    <div class="container">
+        <div class="mbr-row mbr-jc-c">
+            <div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
+                <h3 class="mbr-section-subtitle mbr-black mbr-fonts-style mbr-pb-5 align-left display-5">Seen on
+                    Press</h3>
+                <p class="mbr-fonts-style mbr-text align-left mbr-pb-3 display-5">"Lorem ipsum dolor sit amet consectetur adipiscing
+                    commodo suscipit"</p>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="assets/images/1.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="assets/images/2.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="assets/images/3.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="assets/images/4.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+
+            </div>
+            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
+                <div class="img-wrapper">
+                    <amp-img src="assets/images/5.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
+                        <div placeholder="" class="placeholder">
+                                <div class="mobirise-spinner">
+                                    <em></em>
+                                    <em></em>
+                                    <em></em>
+                                </div></div>
+                        
+                    </amp-img>
+                </div>
+                </section>
 {% endblock %}
