--- a/templates/contacts/index.html.twig
+++ b/templates/contacts/index.html.twig
@@ -1,20 +1,67 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactsController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<section class="content5 cid-s329JSYoFs" id="content05-y">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    
+    <div class="container">
+        <div class="mbr-row">
+            <div class="mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12">
+                <h3 class="mbr-section-subtitle mbr-fonts-style mbr-pb-3 align-left display-2">Product Care and Tips</h3>
+                <p class="mbr-fonts-style mbr-text align-left display-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                    sollicitudin orci vel risus ultricies semper.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/33664/Desktop/ecommercesite/ecommercesite/src/Controller/ContactsController.php'|file_link(0) }}">src/Controller/ContactsController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/33664/Desktop/ecommercesite/ecommercesite/templates/contacts/index.html.twig'|file_link(0) }}">templates/contacts/index.html.twig</a></code></li>
-    </ul>
-</div>
+<section class="form form1 cid-s329Ka5vg5" id="form01-16">
+    
+    
+    <div class="container">
+        <div class="mbr-row">
+            <div class="mbr-col-lg-12 mbr-col-md-12 mbr-pb-5 mbr-col-sm-12">
+                <h2 class="mbr-section-title mbr-fonts-style mbr-pb-3 align-left display-2">Contact us</h2>
+                <h3 class="mbr-fonts-style mbr-subtitle align-left display-7">Let us know how we can help you.</h3>
+            </div>
+
+            <div class="mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 md-pb mbr-form" data-form-type="formoid">
+
+
+
+
+                <!--Formbuilder Form-->
+                <form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kdW0gBK0BiISg8EaJfi452A+FAhIJf2ji3IVKUFHbbdANFDS0joBMcw1bcXsQ42Ud4lyNPJkR1utuNUhKhGx4grGFEtOGgaEKyNXdPwXrNsoWNrjNl6XxZQkP52VGLaX.k4u0AUpew7LdeRIwoX24DQeuk1m16/QXfwNqzfrjMsBmJB1fI830rixSgxsx4WAveh2141qxNUU5vkJg1lubrZaXIEDu915OWfycVazHGxQvu3Tu/Pjs0mcnlXsgpxKS">
+                    <div class="mbr-row">
+                        <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
+                            <template data-form-alert="" type="amp-mustache">Thanks for filling out the form!</template>
+                        </div>
+                        <div submit-error="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
+                            <template data-form-alert="" type="amp-mustache">Failed!</template>
+                        </div>
+                    </div>
+                    <div class="dragArea mbr-row">
+                        <div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field" data-for="form[data][0][1]">
+                            <input type="hidden" name="form[data][0][0]" value="name" id="form[data][0][0]-form01-16" data-form-field="">
+                            <input type="text" name="form[data][0][1]" placeholder="Full Name" data-form-field="name" class="field-input display-7" value="" id="form[data][0][1]-form01-16">
+                        </div>
+                        <div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field" data-for="form[data][1][1]">
+                            <input type="hidden" name="form[data][1][0]" value="email" id="form[data][1][0]-form01-16" data-form-field="">
+                            <input type="email" name="form[data][1][1]" placeholder="Email" data-form-field="email" class="field-input display-7" value="" id="form[data][1][1]-form01-16">
+                        </div>
+                        <div data-for="form[data][2][1]" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field">
+                            <input type="hidden" name="form[data][2][0]" value="text" id="form[data][2][0]-form01-16" data-form-field="">
+                            <input type="text" name="form[data][2][1]" placeholder="Subject" data-form-field="text" class="field-input display-7" value="" id="form[data][2][1]-form01-16">
+                        </div>
+                        <div data-for="form[data][3][1]" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12 field">
+                            <input type="hidden" name="form[data][3][0]" value="message" id="form[data][3][0]-form01-16" data-form-field="">
+                            <textarea name="form[data][3][1]" placeholder="Comment" data-form-field="message" class="field-input display-7" id="form[data][3][1]-form01-16"></textarea>
+                        </div>
+                        <div class="mbr-col-auto"><button type="submit" class="btn btn-black display-7">Send</button></div>
+                    </div>
+                <span class="gdpr-block">
+<label>
+<span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-form01-16" required="">By continuing you agree to our <a style="color: #767676; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #767676; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
+</label>
+</span></form></section>
 {% endblock %}
