--- a/templates/women/index.html.twig
+++ b/templates/women/index.html.twig
@@ -35,7 +35,7 @@
                                     <span aria-hidden="true"></span>
                                 </button>
                                 <div class="item-box-img mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 mbr-flex mbr-p-4">
-                                    <amp-img src="assets/images/01.jpg" layout="responsive" width="598.404255319149" height="500" alt="image" class="placeholder-loader">
+                                    <amp-img src="{{ asset('assets/img/01.jpg') }}" layout="responsive" width="598.404255319149" height="500" alt="image" class="placeholder-loader">
                                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -78,7 +78,7 @@
                             
                         </div>
                         <div class="item-img">
-                            <amp-img src="assets/images/01.jpg" layout="responsive" width="598.404255319149" height="500" alt="image" class="placeholder-loader">
+                            <amp-img src="{{ asset('assets/img/01.jpg') }}" layout="responsive" width="598.404255319149" height="500" alt="image" class="placeholder-loader">
                                 <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -103,7 +103,7 @@
                                     <span aria-hidden="true"></span>
                                 </button>
                                 <div class="item-box-img mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 mbr-flex mbr-p-4">
-                                    <amp-img src="assets/images/02.jpg" layout="responsive" width="500" height="500" alt="image" class="placeholder-loader">
+                                    <amp-img src="{{ asset('assets/img/02.jpg') }}" layout="responsive" width="500" height="500" alt="image" class="placeholder-loader">
                                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -146,7 +146,7 @@
                             
                         </div>
                         <div class="item-img">
-                            <amp-img src="assets/images/02.jpg" layout="responsive" width="500" height="500" alt="image" class="placeholder-loader">
+                            <amp-img src="{{ asset('assets/img/02.jpg') }}" layout="responsive" width="500" height="500" alt="image" class="placeholder-loader">
                                 <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -171,7 +171,7 @@
                                     <span aria-hidden="true"></span>
                                 </button>
                                 <div class="item-box-img mbr-col-lg-6 mbr-col-md-12 mbr-col-sm-12 mbr-flex mbr-p-4">
-                                    <amp-img src="assets/images/06.jpg" layout="responsive" width="927.1978021978023" height="500" alt="image" class="placeholder-loader">
+                                    <amp-img src="{{ asset('assets/img/06.jpg') }}" layout="responsive" width="927.1978021978023" height="500" alt="image" class="placeholder-loader">
                                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -213,7 +213,7 @@
                             
                         </div>
                         <div class="item-img">
-                            <amp-img src="assets/images/06.jpg" layout="responsive" width="927.1978021978023" height="500" alt="image" class="placeholder-loader">
+                            <amp-img src="{{ asset('assets/img/06.jpg') }}" layout="responsive" width="927.1978021978023" height="500" alt="image" class="placeholder-loader">
                                 <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -237,164 +237,4 @@
     </div>
 </section>
 
-<section class="clients1 cid-s329HlEgjD" id="clients01-q">
-
-    
-    <div class="container">
-        <div class="mbr-row mbr-jc-c">
-            <div class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
-                <h3 class="mbr-section-subtitle mbr-black mbr-fonts-style mbr-pb-5 align-left display-5">Seen on
-                    Press</h3>
-                <p class="mbr-fonts-style mbr-text align-left mbr-pb-3 display-5">"Lorem ipsum dolor sit amet consectetur adipiscing
-                    commodo suscipit"</p>
-            </div>
-
-            <div class="line"></div>
-
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/1.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/2.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/3.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/4.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/5.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/1.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/2.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/3.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/4.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-
-            <div class="mbr-col-lg-1 mbr-col-md-3 mbr-col-sm-12">
-                <div class="img-wrapper">
-                    <amp-img src="assets/images/5.png" alt="" width="104.39999999999999" height="87" layout="responsive" class="mobirise-loader mbr-m-auto align-center">
-                        <div placeholder="" class="placeholder">
-                                <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
-                                </div></div>
-                        
-                    </amp-img>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-</section>
 {% endblock %}
