--- a/templates/base.admin.html.twig
+++ b/templates/base.admin.html.twig
@@ -35,13 +35,17 @@
 
         <!-- NAVBAR ITEMS -->
         <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-            <a class="nav-link link text-black display-4" href="{{ path('women') }}">Women</a>
+            <a class="nav-link link text-black display-4" href="{{ path('women_index') }}">Women</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="{{ path('men') }}">Men</a>
+            <a class="nav-link link text-black display-4" href="{{ path('men_index') }}">Men</a>
         </li>
-        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
-        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li></ul>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('accessories_index') }}" aria-expanded="false">accessories</a></li>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('belts_index') }}" aria-expanded="false">belts</a></li>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contact_index') }}" aria-expanded="false">contact</a></li>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('footer_index') }}" aria-expanded="false">footer</a></li>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help_index') }}" aria-expanded="false">help</a></li>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('home_index') }}" aria-expanded="false">home</a></li></ul>
 
         <!-- NAVBAR ITEMS END -->
 
@@ -83,20 +87,17 @@
                 
                 <!-- NAVBAR ITEMS -->
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="{{ path('women') }}">Women</a>
+                        <a class="nav-link link text-black display-4" href="{{ path('women_index') }}">Women</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link text-black display-4" href="{{ path('men') }}">Men</a>
+                        <a class="nav-link link text-black display-4" href="{{ path('men_index') }}">Men</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link link  dropdown-toggle text-black display-4" data-toggle="dropdown-submenu" aria-expanded="false">Explore</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item text-black display-4" href="{{ path('sunglasses') }}">Sunglasses</a>
-                            <a class="dropdown-item text-black display-4" href="{{ path('belts') }}">Belts</a><a class="text-black dropdown-item display-4" href="{{ path('accessories') }}" aria-expanded="false">Accessories </a>
-                        </div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
-                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('accessories_index') }}" aria-expanded="false">accessories</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('belts_index') }}" aria-expanded="false">belts</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contact_index') }}" aria-expanded="false">contact</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('footer_index') }}" aria-expanded="false">footer</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help_index') }}" aria-expanded="false">help</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('home_index') }}" aria-expanded="false">home</a></li></ul>
 
                 <!-- NAVBAR ITEMS END -->
                 <!-- SOCIAL ICON -->
