--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,7 +50,8 @@
         <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
         <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li>
         <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_register') }}" aria-expanded="false">Register</a></li>
-        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_login') }}" aria-expanded="false">Login</a></li></ul>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_login') }}" aria-expanded="false">Login</a></li>
+        <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('paneladmin') }}" aria-expanded="false">Panel Admin</a></li></ul>
 
         <!-- NAVBAR ITEMS END -->
 
@@ -107,7 +108,9 @@
                     <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('contacts') }}" aria-expanded="false">Contacts</a></li>
                     <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('help') }}" aria-expanded="false">Help</a></li>
                     <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_register') }}" aria-expanded="false">Register</a></li>
-                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_login') }}" aria-expanded="false">Login</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('app_login') }}" aria-expanded="false">Login</a></li>
+                    <li class="nav-item"><a class="nav-link link  text-black display-4" href="{{ path('paneladmin') }}" aria-expanded="false">Panel Admin</a></li></ul>
+
 
                 <!-- NAVBAR ITEMS END -->
                 <!-- SOCIAL ICON -->
